Salaries page and inheritance

--- a/pytest.ini
+++ b/pytest.ini
@@ -4,3 +4,4 @@ markers =
     smoke: mark a test as a part of smoke
     authorization: mark test as part of authorization scenario
     submit: mark test as part of submit salary scenario
+    salary: mark test as part of salary listing scenario
